Fixed bottom element sizes on mobile

--- a/main.css
+++ b/main.css
@@ -49,7 +49,7 @@ body {
 }
 
 .container-payflow {
-	min-height: 400px;
+	min-height: 390px;
 	width: 26.5vw;
 	float: left;
 }
